--- a/week1/index.html
+++ b/week1/index.html
@@ -1,85 +1,156 @@
-<!DOCTYPE html><html lang="en"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <title>My Portfolio Website</title> <link rel="preconnect" href="https://fonts.googleapis.com" /> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet" /> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" /> <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" /> <link href="style.css" rel="stylesheet" /> </head> <body> <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm fixed-top bg-body-tertiary"> <div class="container"> <a class="navbar-brand fw-bold" href="#">Andrew's Portfolio</a> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <div class="collapse navbar-collapse justify-content-end" id="navbarNav"> <ul class="navbar-nav align-items-center"> <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li> <li class="nav-item"><a class="nav-link" href="#about">About</a></li> <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li> <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li> <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li> <li class="nav-item ms-2"> <button id="darkModeToggle" class="btn btn-outline-dark border-0"> <i class="bi bi-moon-fill fs-5"></i> </button> </li> </ul> </div> </div> </nav> </header> <main> <section id="home" class="container py-5 text-center"> <div class="py-5"> <h1 class="display-4 fw-bold">Hi, I'm Andrew</h1> <p class="lead">A passionate web developer and designer</p> </div> </section>
-<section id="about" class="container py-5">
-<div class="row align-items-center">
-<div class="col-md-6">
-<h2 class="fw-bold mb-3">About Me</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel sapien ac odio varius dapibus. Integer facilisis nisi ut libero porttitor, eget viverra magna suscipit.</p>
-</div>
-<div class="col-md-6 text-center">
-<div class="rounded-circle bg-secondary" style="width:200px;height:200px;display:inline-block;">
-    <img src="profile.jpg" alt="Profile Picture" class="rounded-circle" style="width:200px;height:200px;object-fit:cover;">
-</div>
-</div>
-</div>
-</section>
-
-<section id="projects" class="py-5">
-<div class="container">
-<h2 class="fw-bold text-center mb-5">Projects</h2>
-<div class="row g-4">
-<div class="col-md-4">
-<div class="card h-100">
-<div class="card-body">
-<h5 class="card-title">Project One</h5>
-<p class="card-text">Description of the project goes here.</p>
-</div>
-</div>
-</div>
-<div class="col-md-4">
-<div class="card h-100">
-<div class="card-body">
-<h5 class="card-title">Project Two</h5>
-<p class="card-text">Description of the project goes here.</p>
-</div>
-</div>
-</div>
-<div class="col-md-4">
-<div class="card h-100">
-<div class="card-body">
-<h5 class="card-title">Project Three</h5>
-<p class="card-text">Description of the project goes here.</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-<section id="experience" class="container py-5">
-<h2 class="fw-bold text-center mb-5">Experience</h2>
-<div class="row">
-<div class="col-md-6">
-<h5>Software Developer Intern</h5>
-<p class="text-muted">Company Name • 2023</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-</div>
-<div class="col-md-6">
-<h5>Web Designer</h5>
-<p class="text-muted">Freelance • 2022</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-</div>
-</div>
-</section>
-
-<section id="contact" class="py-5">
-<div class="container">
-<h2 class="fw-bold text-center mb-4">Contact Me</h2>
-<form class="mx-auto" style="max-width:600px;">
-<div class="mb-3">
-<label class="form-label">Name</label>
-<input type="text" class="form-control" placeholder="Enter your name">
-</div>
-<div class="mb-3">
-<label class="form-label">Email</label>
-<input type="email" class="form-control" placeholder="Enter your email">
-</div>
-<div class="mb-3">
-<label class="form-label">Message</label>
-<textarea class="form-control" rows="4" placeholder="Your message"></textarea>
-</div>
-<button type="submit" class="btn btn-dark w-100">Send Message</button>
-</form>
-</div>
-</section>
-</main> <footer class="text-center py-4 small text-muted"> © 2025 Andrew's Portfolio </footer> <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script> <script src="script.js"></script></body> </html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>My Portfolio Website</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
+        <link href="style.css" rel="stylesheet" />
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm fixed-top bg-body-tertiary">
+                <div class="container">
+                    <a class="navbar-brand fw-bold" href="#">Andrew's Portfolio</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav align-items-center">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#home">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#projects">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#experience">Experience</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Contact</a>
+                            </li>
+                            <li class="nav-item ms-2">
+                                <button id="darkModeToggle" class="btn btn-outline-dark border-0">
+                                    <i class="bi bi-moon-fill fs-5"></i>
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <section id="home" class="container py-5 text-center">
+                <div class="py-5">
+                    <h1 class="display-4 fw-bold">Hi, I'm Andrew</h1>
+                    <p class="lead">A passionate web developer and designer</p>
+                </div>
+            </section>
+            <section id="about" class="container py-5">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <h2 class="fw-bold mb-3">About Me</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel sapien ac odio varius dapibus. Integer facilisis nisi ut libero porttitor, eget viverra magna suscipit.</p>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        <div class="rounded-circle bg-secondary" style="width:200px;height:200px;display:inline-block;">
+                            <img src="profile.jpg" alt="Profile Picture" class="rounded-circle" style="width:200px;height:200px;object-fit:cover;">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="text-center">
+                        <br />
+                        <br />
+                        <a href="https://github.com/AndrewWang4" target="_blank" id="darkModeToggle" class="icon-color btn btn-outline-dark border-0">
+                            <i class="bi bi-github fs-1"></i>
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section id="projects" class="py-5">
+                <div class="container">
+                    <h2 class="fw-bold text-center mb-5">Projects</h2>
+                    <div class="row g-4">
+                        <div class="col-md-4">
+                            <div class="card h-100">
+                                <a href="https://github.com/AndrewWang4" target="_blank" class="icon-color">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Project One</h5>
+                                        <p class="card-text">Description of the project goes here.</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card h-100">
+                                <a href="https://github.com/AndrewWang4" target="_blank" class="icon-color">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Project Two</h5>
+                                        <p class="card-text">Description of the project goes here.</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card h-100">
+                                <a href="https://github.com/AndrewWang4" target="_blank" class="icon-color">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Project Three</h5>
+                                        <p class="card-text">Description of the project goes here.</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="experience" class="container py-5">
+                <h2 class="fw-bold text-center mb-5">Experience</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5>Software Developer Intern</h5>
+                        <p>Company Name • 2023</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h5>Web Designer</h5>
+                        <p>Freelance • 2022</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </section>
+            <section id="contact" class="py-5">
+                <div class="container">
+                    <h2 class="fw-bold text-center mb-4">Contact Me</h2>
+                    <form class="mx-auto" style="max-width:600px;">
+                        <div class="mb-3">
+                            <label class="form-label">Name</label>
+                            <input type="text" class="form-control" placeholder="Enter your name">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Email</label>
+                            <input type="email" class="form-control" placeholder="Enter your email">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Message</label>
+                            <textarea class="form-control" rows="4" placeholder="Your message"></textarea>
+                        </div>
+                        <button type="submit" id="darkModeToggle" class="btn w-100">Send Message</button>
+                    </form>
+                </div>
+            </section>
+        </main>
+        <footer class="text-center py-4 small">© 2025 Andrew's Portfolio</footer>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
+    </body>
+</html>
