Added upload message feature.

--- a/week2/index.html
+++ b/week2/index.html
@@ -12,9 +12,12 @@
     <p class="hoverMicrophoneStyle" id="voicehover">Dictate</p>
     <div class="inputfield">
         <button id="button" class="fileupload" href="#"><img src="plus.svg" height="20px" width="20px" /></button>
-        <input class="inputbox" type="text" placeholder="Ask anything">
+        <input class="inputbox" type="text" placeholder="Ask anything" id="inputtext">
         <button id="voice" class="voice"><img src="microphone.svg" height="20px" width="20px" /></button>
         <button id="voicemode" class="usevoicemode"><img src="voicemode.svg" height="20px" width="20px" /></button>
+        <div id="disable">
+            <button id="uploadmessage"><img src="arrow.svg" height="20px" width="20px" /></button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
