Added Gemini AI

--- a/week2/index.html
+++ b/week2/index.html
@@ -19,6 +19,6 @@
             <button id="uploadmessage"><img src="arrow.svg" height="20px" width="20px" /></button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
