Added Sidebar Layout And Icons

--- a/week2/index.html
+++ b/week2/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="sidebar">
+        <img src="chatgpt.svg" width="30px" height="30px" class="chatgpticonleft" />
+        <img src="newchat.svg" width="30px" height="30px" class="newchaticonleft" />
+        <img src="searchicon.svg" width="30px" height="30px" class="searchiconleft" />
+        <img src="images.svg" width="30px" height="30px" class="imageiconleft" />
+        <img src="upgradeicon.svg" width="30px" height="30px" class="upgradeiconleft" />
+    </div>
     <p class="hoverTextStyle" id="hoverText">Add files and more</p>
     <p class="hoverVoiceStyle" id="hoverTextVoice">Use voice mode</p>
     <p class="hoverMicrophoneStyle" id="voicehover">Dictate</p>
